# api-python-iot

api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
api/migrations/: 001_init.sql  002_users.sql  003_add_humidity.sql  004_sensor_types.sql  005_gateway_status.sql  006_core_gateway.sql  007_production_hardening.sql  008_event_table.sql  009_gateway_config.sql  010_spatial.sql  011_floorplan_meta.sql  012_snapshot_meta.sql  014_device_runtime.sql  015_gw_seq_recovery.sql  016_gw_log_scan.sql  017_gw_seq_recovery_v3.sql  018_drop_gw_log_scan.sql  019_gateway_config_v3.sql  020_device_runtime_node_config.sql  021_calibration.sql  022_measurement_dedupe_by_seq.sql  024_comparison.sql  025_comparison_target.sql  026_firmware_release.sql  027_firmware_deployment.sql
api/scripts/: alert_simulator.py  clean_db.py  hm_simulator.py  lora_simulator.py  mqtt_simulator.py  seed_data.py
api/src/: auth.py  auth_jwt.py  config.py  database.py  log_config.json  main.py  metrics.py  migrate.py
api/src/models/: __init__.py  core.py  gateway.py  monitoring.py  raw.py  spatial.py  telemetry.py  user.py
api/src/routes/: __init__.py  auth.py  calibration.py  comparison.py  devices.py  events.py  firmware.py  firmware_deployment.py  gateways.py  internal_metrics.py  spatial.py  status.py  telemetry.py
api/src/schemas/: __init__.py  calibration.py  comparison.py  device.py  firmware.py  firmware_deployment.py  gateway.py  spatial.py  telemetry.py  user.py
api/src/services/: __init__.py  calibration.py  (+11 more)
api/tests/: test_calibration.py
(+1 files in other folders)
