[project]
name = "sensorhub-api"
version = "0.1.0"
description = "Telemetry ingestion API for IoT devices"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "prometheus-client>=0.19.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "aiomqtt>=2.0.0",
    "python-json-logger>=2.0.7",
    "httpx>=0.26.0",
    "python-multipart>=0.0.9",
    "scour>=0.38.2",
    "pillow>=10.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
